[package]
name = "pin-init"
version = "0.2.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nbdd0121/pin-init"
keywords = ["pin", "macros", "attribute"]
categories = ["no-std", "rust-patterns"]
description = """
Safe pinned-initialization in Rust
"""

[workspace]
members = ["pin-init-internal"]

[dependencies]
pin-init-internal = { version = "=0.2.0",  path = "pin-init-internal" }

[dev-dependencies]
libc = "0.2"
pin-project = "1"

[features]
alloc = []
alloc_pin_with = ["alloc"]
alloc_try_pin_with = ["alloc"]
default = ["alloc", "alloc_pin_with"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
