[package]
name = "pin-init-internal"
version = "0.2.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nbdd0121/pin-init"
description = """
Internal implementation details of crate `pin_init`.
"""

[lib]
proc_macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
